split absolute paths from normal paths

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -2,7 +2,7 @@
     <meta name="google-site-verification" content="aloBwm93e88RJEH5XUhpIl9yuBphazWNYt6Al0PR7cM">
     <meta charset="UTF-8">
     <meta property="og:url" content="https://touraine.tech/">
-    <meta property="og:image" content="${require('../../img/logo_tnt.png')}"/>
+    <meta property="og:image" content="${require('../../img/logo_tnt.png?absolute')}"/>
     <meta property="og:type" content="website">
     <meta property="og:title" content="Touraine Tech">
     <meta property="og:description" content="La première conférence technique en région centre sur les nouvelles technologies du numérique">
