Another PR Build test

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <div itemscope itemprop="organization" itemtype="http://schema.org/Organization" class="nav-bar">
         <a class="link" href="https://touraine.tech" itemprop="url">
             <img src="../../img/logo_tnt.svg" alt="Touraine Tech" itemprop="logo">
-            <h1 itemprop="name">Touraine Tech</h1>
+            <h1 itemprop="name">Touraine Tech - TEST 2</h1>
         </a>
         <a class="link participer" href="#participer">Participer</a>
         <label for="nav-trigger" class="nav-open" id="nav-open">
