a bit faster build and support links on github pages test version.

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,4 +1,5 @@
 <head>
+    <base href="${require('../basePath')}">
     <meta name="google-site-verification" content="aloBwm93e88RJEH5XUhpIl9yuBphazWNYt6Al0PR7cM">
     <meta charset="UTF-8">
     <meta property="og:url" content="https://touraine.tech/">
