fix(wording) : comité touraineTch de palo

--- a/src/partials/presentation.html
+++ b/src/partials/presentation.html
@@ -23,7 +23,7 @@
     </article>
     <article class="presentation-event">
         <div class="event">
-            <p>Cet événement a pour but de <em>promouvoir le secteur numérique</em>, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l’association <em>Touraine Tech</em>, dont l’objectif est de développer ce secteur d’activité en Touraine.</p>
+            <p>Cet événement a pour but de <em>promouvoir le secteur numérique</em>, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par le comité <em>Touraine Tech</em> de l'association PALO ALTOURS, dont l’objectif est de développer ce secteur d’activité en Touraine.</p>
             <p>Cette conférence est ouverte à un large public, aussi bien des professionnels du secteur que des étudiants préparant leur insertion dans le monde du travail.</p>
         </div>
         <div class="event">
