--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,18 +4,18 @@
             <img src="../../img/logo_tnt.svg" alt="Touraine Tech" itemprop="logo">
             <h1 itemprop="name">Touraine Tech</h1>
         </a>
-        <a class="link participer" href="#participer">Participer</a>
+        <a class="link participer" href="./#participer">Participer</a>
         <label for="nav-trigger" class="nav-open" id="nav-open">
             Menu
         </label>
     </div>
     <input type="checkbox" id="nav-trigger">
     <nav>
-        <a class="link" href="/#presentation">Présentation</a>
-        <a class="link" href="/#thematiques">Thématiques</a>
-        <a class="link" href="/#quisommesnous">Qui sommes nous ?</a>
-        <a class="link" href="/#participer">Participer</a>
-        <a class="link" href="/#proposer">Proposer un sujet</a>
-        <a class="link" href="/sponsors.html">Sponsors</a>
+        <a class="link" href="./#presentation">Présentation</a>
+        <a class="link" href="./#thematiques">Thématiques</a>
+        <a class="link" href="./#quisommesnous">Qui sommes nous ?</a>
+        <a class="link" href="./#participer">Participer</a>
+        <a class="link" href="./#proposer">Proposer un sujet</a>
+        <a class="link" href="./sponsors.html">Sponsors</a>
     </nav>
 </header>
