--- a/src/global.scss
+++ b/src/global.scss
@@ -449,22 +449,25 @@ a.link {
   padding: 2rem;
   h1 {
     color: $BgColorDark;
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
   h2 {
     color: $BgColor;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     font-weight: 400;
     margin-top: 5pt;
     text-align: center;
   }
   img {
-    max-width: 20%;
-    margin: 2rem;
+    max-width: 50%;
+    margin: 0;
   }
-  div.bronze {
-    margin-bottom: 15px;
+  .bronze {
+    h2 {
+      margin: 0;
+    }
   }
+
 }
 
 #participer {
