--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -1,24 +1,8 @@
 <section id="partenaires">
     <h1>Nos Partenaires</h1>
-    <div class="gold">
-        <h2>Gold</h2>
-        <a target="_blank" href="/"><img src="" alt="Logo d'apside"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo de Lunatech"></a>
-    </div>
-    <div class="silver">
-        <h2>Silver</h2>
-        <a target="_blank" href="/"><img src="" alt="Logo Worldline?"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo autre"></a>
-    </div>
-    <div class="bronze">
-        <h2>Bronze</h2>
-        <a target="_blank" href="/"><img src="" alt="Logo Code Troopers?"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo Saagi"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo T&Co?"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo autre"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo autre"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo autre"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo autre"></a>
-        <a target="_blank" href="/"><img src="" alt="Logo autre"></a>
-    </div>
+        </div>
+        <div class="bronze">
+            <h2>Bronze</h2>
+            <a target="_blank" href="/"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers?"></a>
+        </div>
 </section>
