Good url for the troopers

--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -3,6 +3,6 @@
         </div>
         <div class="bronze">
             <h2>Bronze</h2>
-            <a target="_blank" href="/"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers?"></a>
+            <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers?"></a>
         </div>
 </section>
