Ajout partenaire - apside

--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -1,8 +1,13 @@
 <section id="partenaires">
     <h1>Nos Partenaires</h1>
+    <article class="partenaires">
+        <div class="gold">
+            <h2>Gold</h2>
+            <a target="_blank" href="http://www.apside.com"><img src="../../img/logo-apside.png" alt="Logo d'apside"></a>
         </div>
         <div class="bronze">
             <h2>Bronze</h2>
-            <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers?"></a>
+            <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers"></a>
         </div>
+    </article>
 </section>
