--- a/src/global.scss
+++ b/src/global.scss
@@ -472,24 +472,37 @@ a.link {
 
 #partenaires {
   padding: 2rem;
+  article.partenaires {
+    display: flex;
+    flex-direction: row;
+  }
   h1 {
     color: $BgColorDark;
     font-size: 2rem;
   }
   h2 {
     color: $BgColor;
-    font-size: 1.8rem;
-    font-weight: 400;
-    margin-top: 5pt;
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin-top: 5px;
     text-align: center;
   }
   img {
     max-width: 50%;
     margin: 0;
   }
-  .bronze {
+  .gold, .bronze {
     h2 {
       margin: 0;
+    }
+  }
+
+  @media (max-width: $tablet - 1) {
+    article.partenaires {
+      flex-direction: column;
+      h2.bronze {
+        margin-top: 10px;
+      }
     }
   }
 
