--- a/src/partials/presentation.html
+++ b/src/partials/presentation.html
@@ -33,6 +33,7 @@
         </div>
     </article>
     <article class="presentation-accroche">
+        <h1>Pour cette première, nous accueillerons 250 personnes</h1>
         <h1><a href="https://www.helloasso.com/associations/palo-altours/evenements/touraine-tech-2018">inscrivez vous ici</a></h1>
     </article>
 </section>
