feature(partenaireSponsors) : rename partenaire section and add new partenaire section

--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -1,5 +1,5 @@
 <section id="partenaires">
-    <h1>Nos Partenaires</h1>
+    <h1>Nos Sponsors</h1>
     <article class="partenaires">
         <div class="gold">
             <h2>Gold</h2>
@@ -8,6 +8,13 @@
         <div class="bronze">
             <h2>Bronze</h2>
             <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers"></a>
+        </div>
+    </article>
+    <h1>Nos Partenaires</h1>
+    <article class="partenaires">
+        <div class="gold" style="color: black">
+            Coming soon !
+            <!--a target="_blank" href="http://polytech.univ-tours.fr/"><img src="../../img/logo-polytech.png" alt="Logo de l'Ecole d'ingénieurs Polytechnique de l'Université de Tours"></a-->
         </div>
     </article>
 </section>
