--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -1,6 +1,6 @@
 <section id="partenaires">
-    <h1>Nos Partenaires</h1>
-    <article class="partenaires">
+    <h1>Sponsors</h1>
+    <article class="sponsors">
         <div class="gold">
             <h2>Gold</h2>
             <a target="_blank" href="http://www.apside.com"><img src="../../img/logo-apside.png" alt="Logo d'apside"></a>
@@ -9,5 +9,9 @@
             <h2>Bronze</h2>
             <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers"></a>
         </div>
+    </article>
+    <h1>Partenaires</h1>
+    <article class="partenaires">
+        <a target="_blank" href="http://polytech.univ-tours.fr"><img src="../../img/logo-polytech.png" alt="Logo de Polytech"></a>
     </article>
 </section>
