--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -4,6 +4,7 @@
         <div class="gold">
             <h2>Gold</h2>
             <a target="_blank" href="http://www.apside.com"><img src="../../img/logo-apside.png" alt="Logo d'apside"></a>
+            <a target="_blank" href="http://lunatech.com/fr/"><img src="../../img/logo-lunatech.png" alt="Logo de Lunatech"></a>
         </div>
         <div class="bronze">
             <h2>Bronze</h2>
