reoganize the code

--- a/src/global.scss
+++ b/src/global.scss
@@ -4,7 +4,9 @@
 /**
  * Globals
  */
-*{ box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+}
 
 html, body {
   padding: 0;
@@ -220,7 +222,7 @@ a.link {
     padding: 3rem 0;
     margin-bottom: 0;
 
-    p{
+    p {
       @media (max-width: $phone - 1) {
         font-size: 1rem;
       }
@@ -601,7 +603,7 @@ a.link {
   h1 {
     @include title($BgColorLight, 2rem);
   }
-  p{
+  p {
     font-size: 1.2rem;
   }
   background-color: $BgColorDark;
@@ -630,7 +632,6 @@ a.link {
   }
 }
 
-
 /**
  * Footer
  */
@@ -653,32 +654,8 @@ footer a:visited {
 
 .news {
   color: $BgColorDark;
-  .news-list {
+  .news-previews-list {
     width: 100%;
-    flex: 1;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    .news-item {
-      width: 30%;
-    }
-  }
-
-  .news-item {
-    text-align: left;
-    .news-item-header {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      padding: 10px 0;
-      h1 {
-        margin: 0;
-      }
-      & > * {
-        padding-right: 10px;
-      }
-    }
   }
   .link {
     text-decoration: none;
@@ -686,5 +663,43 @@ footer a:visited {
     background-color: $BgColor;
     font-size: 2rem;
     padding: 15px;
+  }
+}
+
+.news-item {
+  color: $BgColorDark;
+  text-align: left;
+
+  &:not(.modal-content) {
+    padding: 10px;
+  }
+
+  .news-item-header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px 0;
+    h1 {
+      margin: 0;
+    }
+    & > * {
+      padding-right: 10px;
+    }
+  }
+
+  .news-item-footer {
+    text-align: right;
+  }
+
+  .modal-content {
+    display: none;
+  }
+
+  .read-more {
+    text-decoration: none;
+    color: $textColor;
+    background-color: $BgColor;
+    font-size: 1rem;
+    padding: 7px;
   }
 }
