--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1,6 +1,6 @@
 <section class="news">
-    <div class="news-list">
-        ${require('../articles/fragments/all')}
+    <div class="news-previews-list">
+        ${require('../articles/fragments/allHome')}
     </div>
-    <a href="#" class="link">Tous les articles</a>
+    <a href="./news.html" class="link">Tous les articles</a>
 </section>
