feature(newsMenuEntry) : adding news menu entry

--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1,4 +1,4 @@
-<section class="news">
+<section class="news" id="news">
     <div class="news-previews-list">
         ${require('../articles/fragments/allHome')}
     </div>
