--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1,6 +1,9 @@
+<section style="background-color: #1f202c; height: 100px"></section>
 <section class="news" id="news">
+    <h1>Les actus</h1>
+    <p>Suivez nos actus, eos mollitia recusandae ullam. Aperiam atque dicta, doloribus nemo officia saepe!</p>
     <div class="news-previews-list">
         ${require('../articles/fragments/allHome')}
     </div>
-    <a href="./news.html" class="link">Tous les articles</a>
+    <a href="./news.html" class="link">Lire les articles</a>
 </section>
