--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -9,6 +9,7 @@
         <div class="bronze">
             <h2>Bronze</h2>
             <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers"></a>
+            <a target="_blank" href="https://www.saagie.com/fr"><img src="../../img/logo-saagie.png" alt="Logo Saagie"></a>
         </div>
     </article>
     <h1>Partenaires</h1>
